--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -9,39 +9,96 @@
 
 {% block content %}
 <style>
-    .bottom-buttom-row{
+     .top-button-row{
+        border-bottom: 1px solid #D7D7D7;     
+        
+    }
+    .bottom-button-row{
         border-top: 1px solid #D7D7D7;
     }
+   
+    .completed-text {
+            display: none;
+            color: rgb(10, 190, 10);
+            font-weight: 500;
+    }
+    .btn{
+            border-radius: 10px;
+    }
+    .btn-previous {
+        background-color: lightgrey;
+        border: 2px solid lightgrey;
+        color: #1c1c1c;
+        margin-right: 10px;
+    }
+    .btn-previous:hover {
+        background-color: lightgrey;
+        color: white;
+        border-color: grey;
+    }
+    .btn-next {
+            background-color: #FFBB00;
+            border: 2px solid #FFBB00;
+            color: white;
+     }
+    .btn-next:hover {
+        background-color: rgb(253, 225, 172);
+        color: white;
+        border-color: orange;
+    }
+    .h1{
+        font-weight: 800;
+    }
+    
+    .btn-mark-read{
+   
+        color: white;
+    } 
+    .btn-mark-read:focus{
+        outline: none!important;
+       
+        background-color: #427CD4;
+        color: white;
+    } 
+            /* .btn-outline-orange {
+            border-color: orange;
+            color: orange;
+        } */ 
 </style>
 
 <div class="col-12 content-section">
-    <div class="row d-flex justify-content-end">
-        {% if previous_lesson_id %}
-            <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn ">
-                <i class="fas fa-angle-left"></i> Previous 
-            </a>
-        {% endif %}
-        
-        {% if next_lesson_id %}
-            <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn ">
-                Next <i class="fas fa-angle-right"></i>
-            </a>
-        {% endif %}
+    <div class="row d-flex justify-content-between  mt-5 mb-5 pt-2 pb-2  top-button-row" >
+        <div class="col-md-6 "><h5 id="completed-above-title" class="completed-text">Completed<i class="fas fa-check"></i><i class="fas fa-check"></i> </h5></div>
+        <div class="col-md-6">
+            <div class="row d-flex justify-content-end ">
+                {% if previous_lesson_id %}
+                    <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn btn-previous">
+                        <i class="fas fa-angle-left"></i> Previous 
+                    </a>
+                {% endif %}
                 
-            
+                {% if next_lesson_id %}
+                    <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn btn-next">
+                        Next <i class="fas fa-angle-right"></i>
+                    </a>
+                {% endif %}
+                        
+                    
+            </div>
+        </div> 
     </div>
-
+   
 
     <div class="row ">
-        <h1>{{ lesson.title }}</h1>
+        <h1 class="d-flex align-items-center">{{ lesson.title }}</h1>
         <p>{{ lesson.description }}</p>
 
         {% for subtopic in subtopics %}
-        <h3>{{ subtopic.title }}</h3>
+        <h4>{{ subtopic.title }}</h3>
         <p>{{ subtopic.notes|linebreaks }}</p> <!-- Converts line breaks to <br> tags -->
         
         {% if subtopic.code %}
-        <pre class="language-markup"><code>{{ subtopic.code|safe }}</code></pre>
+        <pre class="language-html"><code>{{ subtopic.code|escape }}</code></pre>
         {% endif %}
         
         {% endfor %}
@@ -50,20 +107,21 @@
 
     <div class="col-12 d-flex justify-content-between bottom-button-row mt-5 mb-5 pt-3" >
         <div class="row">
-            <button type="button" class="btn btn-outline-primary btn-mark-read">
-                Mark as Read<i class="fas fa-check"></i><i class="fas fa-check"></i> 
+            <button type="button" id="mark-as-read" class="btn btn-primary btn-mark-read">
+                Mark as Read 
             </button>
+            <span id="completed-beside-button" class="completed-text ml-3">Completed<i class="fas fa-check"></i><i class="fas fa-check"></i></span>
         </div>
         
         <div class="row d-flex justify-content-end">
             {% if previous_lesson_id %}
-                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn ">
+                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=previous_lesson_id %}" class="btn btn-previous">
                     <i class="fas fa-angle-left"></i> Previous 
                 </a>
             {% endif %}
             
             {% if next_lesson_id %}
-                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn ">
+                <a href="{% url 'lessons:lesson_detail' module_id=lesson.module.id lesson_id=next_lesson_id %}" class="btn btn-next">
                     Next <i class="fas fa-angle-right"></i>
                 </a>
             {% endif %}
@@ -73,4 +131,23 @@
     </div>
    
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var markAsReadButton = document.getElementById('mark-as-read');
+        var completedTextAboveTitle = document.getElementById('completed-above-title');
+        var completedTextBesideButton = document.getElementById('completed-beside-button');
+
+        markAsReadButton.addEventListener('click', function() {
+            // Change button style to orange
+            markAsReadButton.classList.remove('btn-outline-orange');
+            markAsReadButton.classList.add('btn-orange');
+
+            // Show completed texts
+            completedTextAboveTitle.style.display = 'block';
+            completedTextBesideButton.style.display = 'inline';
+        });
+    });
+</script>
+
 {% endblock %}
