--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,13 @@
     <link rel="stylesheet" href="{% static 'css/module_list.css' %}">
     <style>
         .module_list {
-            max-height: 1500px; 
+            /* max-height: 1500px;  */
             overflow-y: auto;
-            background-color: aqua;
+            position: -webkit-sticky; /* For Safari */
+            position: sticky;
+            top: 0; /* Sticks to the top */
+            background-color: rgb(248, 247, 247);
+            
         }
     </style>
 </head>
@@ -40,7 +44,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/prism.min.js"></script>
+   >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.27.0/plugins/autoloader/prism-autoloader.min.js"></script>
 
     <script>
