--- a/templates/exercise/module_exercise.html
+++ b/templates/exercise/module_exercise.html
@@ -1,4 +1,3 @@
-<!-- module_exercise.html -->
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,6 +8,7 @@
     <title>Module Exercise</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/module_exercise.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
@@ -17,13 +17,86 @@
         .title {
             border-bottom: 1px solid #D7D7D7!important;
         }
+        .question-content{
+        
+            margin: 50px;
+            border: 1px solid rgb(240, 240, 240);
+            border-radius: 10px;
+            background-color: #f7f9fc;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* Added to distribute space */
+
+        }
+        .response-input{
+            height: 324px!important;
+            background-color: rgb(252, 252, 252);
+            border-radius: 10px!important;
+        }
+        .btn{
+            border-radius: 10px;
+        }
+        .btn-previous {
+            background-color: rgb(185, 185, 185);
+            /* border: 2px solid lightgrey; */
+            color: #1c1c1c;
+            margin-right: 10px;
+        }
+        .btn-previous:hover {
+            background-color: lightgrey;
+            color: white;
+            border-color: grey;
+        }
+        .btn-next {
+                background-color: #FFBB00;
+                border: 2px solid #FFBB00;
+                color: white;
+        }
+        .btn-next:hover {
+            background-color: rgb(253, 225, 172);
+            color: white;
+            border-color: #FFBB00;
+        }
+        .btn-hint{
+            background-color: #FFBB00;
+            color: white;
+            border-radius: 20px;
+            
+        }
+        .btn-hint:focus{
+            background-color: #FFBB00;
+            border: none!important;
+            border-radius: 20px;
+            
+        }
+        .response-input{
+            background-color: rgb(247, 247, 247);
+            border-radius: 10px;
+           
+        }
+        .module, .exercise-title{
+            font-weight:600;
+        }
+        .btn-submit{
+            background-color:#427CD4;
+            color: white;
+            border-radius: 15px;
+        }
+        .btn-submit:hover{
+            background-color:#0e4291;
+            color: white;
+            border-radius: 15px;
+        }
+        /* .module{
+            color:#427CD4;
+        } */
     </style>
     <div class="container-fluid main-container">
         <div class="row inner-row">
             <div class="col-12">
                 <div class="row title pt-2 pb-2">
-                    <div class="col-md-6">
-                        <h2 class="">{{ module.title }}</h2>
+                    <div class="col-md-6 mt-3 pl-3">
+                        <h3 class="module">Module {{module.id}} : {{ module.title }}</h3>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end mt-3">
                         <button class="btn btn-outline-primary mr-2">Start Over</button>
@@ -32,42 +105,48 @@
                 </div>
                 
                 <div class="row">
-                    <div class="col-2 question-list">
-                        <div>
-                            <div class="row questions d-flex justify-content-center pt-1 pb-2">
-                                <h4>Exercises</h4>
-                            </div>
-                            
-                            <ul id="exercise-ul" class="list-group list-group-flush">
-                                {% for exercise in exercises %}
-                                    <li class="list-group-item"><a href="#" class="exercise-link btn" data-exercise-id="{{ exercise.id }}">Exercise {{ exercise.id }}</a></li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-5 question-content">
+                    <div class="col-6 question-content pb-3">
                         <div class="mt-4">
-                            <h3 id="exercise-title">Exercise 1</h3>
-                            <p id="exercise-content">Exercise content will be displayed here.</p>
+                            <div id="exercise-details" class="exercise-details active" data-exercise-id="{{ exercises.0.id }}">
+                                <h5 class="exercise-title">{{ exercises.0.title }}</h5>
+                                <p class="exercise-content">{{ exercises.0.content }}</p>
+                            </div>
                         </div>
                         <div class="d-flex justify-content-between mt-3">
-                            <button class="btn btn-outline-primary" id="skip-button">Skip</button>
+                            <button class="btn btn-previous pl-4 pr-4" id="prev-button" disabled>Previous</button>
+                            <button class="btn btn-next pl-4 pr-4" id="next-button">Next</button>
                         </div>
                     </div>
-                    <div class="col-5 pb-3 answer">
-                        <div class="mt-4">
-                            <div class="input-group mt-3">
-                                <textarea class="form-control" id="answer" placeholder="Type your answer here..."></textarea>
+                    <div class="col-5 pb-3 response-row">
+                        <div class="row mt-2 ms-2  pl-3 ">
+                            <p>
+                                <a class="btn btn-hint p-2" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                                    <i class="fas fa-lightbulb"></i> Hints
+                                </a>
+                                
+                            </p>
+
+                              <div class="collapse" id="collapseExample">
+                              
+                                <div class="card card-body">
+                                    <p id="hint-1">Hint 1: Placeholder hint content.</p>
+                                    <p id="hint-2">Hint 2: Placeholder hint content.</p>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="">
+                            <div class="input-group mt-3  ">
+                                <textarea class="form-control response-input " id="answer" placeholder="Type your answer here..."></textarea>
                                 <span class="hint-icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-lightbulb"></i>
+                                    
                                 </span>
-                                <div class="hint-dropdown">
+                                <!-- <div class="hint-dropdown">
                                     <p id="hint-1">Hint 1: JavaScript is a programming language used for web development.</p>
                                     <p id="hint-2">Hint 2: It is commonly used to create interactive effects within web browsers.</p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="d-flex justify-content-between mt-3">
-                                <button class="btn exercise-list-button" id="submit-button">Submit</button>
+                                <button class="btn btn-submit pl-5 pr-5" id="submit-button">Submit</button>
                             </div>
                         </div>
                     </div>
@@ -77,47 +156,71 @@
     </div>
 
     <!-- Include necessary JavaScript libraries -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> <!-- Highlighted change -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script> <!-- Highlighted change -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> <!-- Highlighted change -->
+
     <script>
         $(document).ready(function() {
-            // Function to load exercise details by ID
-            function loadExercise(exerciseId) {
-                // Replace with actual AJAX request to fetch exercise details from backend
-                $.ajax({
-                    url: `/api/exercises/${exerciseId}/`,  // Example URL, adjust as per your backend setup
-                    type: 'GET',
-                    success: function(data) {
-                        $('#exercise-title').text(`Exercise ${data.id}`);
-                        $('#exercise-content').text(data.content);
-                        // Update hints if needed
-                    },
-                    error: function(xhr, status, error) {
-                        console.error('Error fetching exercise details:', error);
-                    }
-                });
+            var exercises = JSON.parse('{{ exercises_json|escapejs }}'); // Retrieve exercises from Django context
+            var currentIndex = 0;
+            var exerciseCount = exercises.length;
+            var hintIndex = 0;
+    
+            // Function to display exercise details
+            function displayExercise(index) {
+                $('#exercise-details').attr('data-exercise-id', exercises[index].id);
+                $('.exercise-title').text(exercises[index].title);
+                $('.exercise-content').text(exercises[index].content);
+                $('#collapseExample .card-body').html(''); // Clear hints when switching exercises
+                hintIndex = 0;
             }
-
-            // Handle click events on exercise links
-            $('.exercise-link').on('click', function(event) {
-                event.preventDefault();
-                var exerciseId = $(this).data('exercise-id');
-                loadExercise(exerciseId);
-
-                // Update active state of the exercise links
-                $('.exercise-link').removeClass('active');
-                $(this).addClass('active');
+    
+            // Function to display next hint
+            function displayNextHint() {
+                if (hintIndex < exercises[currentIndex].hints.length) {
+                    var hint = exercises[currentIndex].hints[hintIndex];
+                    var hintElement = `<p id="hint-${hintIndex + 1}">${hint}</p>`;
+                    $('#collapseExample .card-body').append(hintElement);
+                    hintIndex++;
+                }
+            }
+    
+            // Initial display of first exercise
+            displayExercise(currentIndex);
+    
+            // Handle click event on Next button
+            $('#next-button').on('click', function() {
+                if (currentIndex < exerciseCount - 1) {
+                    currentIndex++;
+                    displayExercise(currentIndex);
+                    $('#prev-button').prop('disabled', false); // Enable Previous button when navigating forward
+                }
+    
+                // Disable Next button when reaching the last exercise
+                if (currentIndex === exerciseCount - 1) {
+                    $('#next-button').prop('disabled', true);
+                }
             });
-
-            // Handle click event on submit button (for demonstration)
-            $('#submit-button').on('click', function() {
-                // Implement logic to handle submission and progression to the next exercise
-                // Example: Load and display the next exercise after submission
-                var currentExerciseId = parseInt($('#exercise-title').text().split(' ')[1]);
-                var nextExerciseId = currentExerciseId + 1;
-                loadExercise(nextExerciseId);
+    
+            // Handle click event on Previous button
+            $('#prev-button').on('click', function() {
+                if (currentIndex > 0) {
+                    currentIndex--;
+                    displayExercise(currentIndex);
+                    $('#next-button').prop('disabled', false); // Enable Next button when navigating backward
+                }
+    
+                // Disable Previous button when at the first exercise
+                if (currentIndex === 0) {
+                    $('#prev-button').prop('disabled', true);
+                }
+            });
+    
+            // Handle hint button click event
+            $('.btn-hint').on('click', function() {
+                $('#collapseExample').collapse('toggle');
+                displayNextHint();
             });
         });
     </script>
