--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -43,7 +43,7 @@
 </style>
 
 <nav class="navbar navbar-expand-lg">
-    <img src="{% static 'images/logo-transparent.svg' %}" alt="Illustration" class="logo mr-5">
+    <img src="{% static 'images/logonew.png' %}" alt="Illustration" class="logo mr-5">
     <div class="collapse navbar-collapse">
         <!-- Search Bar and Level Dropdown in the same flex container -->
         <div class="d-flex flex-grow-1 justify-content-center">
