--- a/templates/lesson_detail.html
+++ b/templates/lesson_detail.html
@@ -42,9 +42,9 @@
             color: white;
      }
     .btn-next:hover {
-        background-color: rgb(253, 225, 172);
-        color: white;
-        border-color: orange;
+        background-color: rgb(255, 255, 255);
+        color: #FFBB00;
+        border-color: #FFBB00;
     }
     .h1{
         font-weight: 800;
@@ -67,6 +67,7 @@
 </style>
 
 <div class="col-12 content-section">
+    
     <div class="row d-flex justify-content-between  mt-5 mb-5 pt-2 pb-2  top-button-row" >
         <div class="col-md-6 "><h5 id="completed-above-title" class="completed-text">Completed<i class="fas fa-check"></i><i class="fas fa-check"></i> </h5></div>
         <div class="col-md-6">
