--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -26,10 +26,10 @@
                 <form class="form mt-3 mb-3 w-75" id="login-form" action="{% url 'accounts:login' %}" method="post">
                     {% csrf_token %}
                     <h2 class="text-center mb-5 signup">Login</h2>
-                    <div class="form-group">
-                        <label for="username" class="label">Username</label>
-                        <input type="text" class="form-control" id="username" name="username">
-                        <div class="invalid-feedback" id="username-error"></div>
+                     <div class="form-group">
+                        <label for="email" class="label">Email address</label>
+                        <input type="email" class="form-control" id="email" name="username" />
+                        <div class="invalid-feedback" id="email-error"></div>
                     </div>
                     <div class="form-group">
                         <label for="password" class="label">Password</label>
@@ -61,17 +61,17 @@
             form.addEventListener("submit", function (event) {
                 event.preventDefault();
 
-                var username = document.getElementById("username").value.trim();
+                var email = document.getElementById("email").value.trim();
                 var password = document.getElementById("password").value.trim();
                 var isValid = true;
 
-                if (username === "") {
-                    document.getElementById("username-error").textContent = "Please enter your username.";
-                    document.getElementById("username").classList.add("is-invalid");
+                if (email === "") {
+                    document.getElementById("email-error").textContent = "Please enter your email.";
+                    document.getElementById("email").classList.add("is-invalid");
                     isValid = false;
                 } else {
-                    document.getElementById("username-error").textContent = "";
-                    document.getElementById("username").classList.remove("is-invalid");
+                    document.getElementById("email-error").textContent = "";
+                    document.getElementById("email").classList.remove("is-invalid");
                 }
 
                 if (password === "") {
@@ -85,7 +85,6 @@
 
                 if (isValid) {
                     console.log("Form is valid. Submitting...");
-                    debugger;
                     form.submit();
                 } else {
                     console.log("Form is not valid. Please fill in all fields.");
